# Menu

./: CMakeLists.txt
src/: main.c
src/entity/: struct.h
src/logiAndRegister/: LoginRegister.c  LoginRegister.h
src/memorizeWord/: MemorizeWords.c  MemorizeWords.h
src/wordBook/: WordBookManagement.c  WordBookManagement.h
